--- a/src/components/App.css
+++ b/src/components/App.css
@@ -341,7 +341,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 
 .nav a > span { color:#192229; display:inline-block;   }
 
-#login span { display:inline-block; margin-left:20px; cursor:pointer; /*pointer-events:none; opacity:0.65;*/ }
+#login span { display:inline-block; margin-left:20px; cursor:pointer; /*pointer-events:none; opacity:0.65;*/}
 
 .nav #donate { width:150px;height:50px;border-radius: 2px; color:white;background-color: #d73449; line-height:50px; 
    text-align:center; display:inline-block;  margin-left:35px; }
@@ -2782,7 +2782,7 @@ svg.hide { opacity:0;pointer-events:none; }
 .diva-tools-right { width:400px; }
 .diva-tools-left { padding-right:100px; width:300px;}
 
-
+.resource .profile-container { background:white; padding:0; }
 .profile-container { padding:40px 100px; }
 .profile-area h1 { margin-top:0; }
 /*
