--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1110,6 +1110,7 @@ h4:not(:hover) > .lang
 .resource.user .data .header .before img { max-width:80px; height:auto; flex-shrink:0;flex-grow:0; }
 
 .resource.user .data .FC { width:300px; min-width:0; }
+.resource.user .data [data-shrink="true"],
 .resource.user .data [class*="MuiInputLabel-shrink"] { display:none;}
 .resource.user .data [class*="MuiInput-underline"]::before {  border:none; }
 .resource.user .data .FC > div { margin-top:0; }
@@ -1357,6 +1358,7 @@ vertical-align:middle;}
 #popSame { margin-top:-10px; z-index:1000000; }
 #popDL { margin-top:30px; }
 
+body > [id^="menu-"] > div:last-child,
 .collapse.sortBy > div:last-child,
 #popLang > div:last-child,
 #popSame  > div:last-child,
