show language preferences in user profile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1129,6 +1129,11 @@ h4:not(:hover) > .lang
 
 .resource.user .data input[disabled] { color:rgba(0,0,0,0.55); }
 
+.resource.user .data > div[data-props="tmp:cultural"] + div::after { display:none;}
+
+.resource.user .data#outline > .search { justify-content: flex-start; padding-left:37px;  }
+.resource.user .data#outline > .search h3 { font-weight:600;}
+
 .resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 34px;  height: 60px; background-color: #172832; line-height:58px; }
 .resource .data .header .src.orig { cursor:pointer;}
 .resource .data .header .src img { background-color: white; width:calc(100% - 3px * 2 - 2px * 2);padding:2px; margin-left:3px; display:inline-block; 
@@ -2692,25 +2697,38 @@ body {overflow-x:hidden; }
 .dataWidget > label > span:first-child { width:22px;height:22px; color:rgba(0,0,0,0.7); margin-left:9px;margin-right:2px; }
 .SidePane .help { text-align:left;font-style:italic;margin-bottom:10px; font-size:12px; width:300px;line-height:16px; }
 /* .subcollapse label span:last-child { max-width:120px;} */
-.dataWidget ol { margin:0; font-size:12px;padding-left:16px; list-style: none; counter-reset: li}
+.dataWidget ol { margin:0; font-size:12px;padding-left:16px; list-style: none; counter-reset: li; margin-top:4px; pointer-events:none; opacity:0.55;}
 .dataWidget ol li {counter-increment: li; z-index:100;}
 body > .ol-li-lang:last-child li::before,
-.dataWidget ol li::before {content: counter(li);  display: inline-block; width: 1.1em; margin-left: -1.1em ; font-weight:800; }
+.dataWidget ol li::before {content: "(" counter(li) ")";  display: inline-block; width: 1.75em; margin-left: -1.25em ; font-weight:700; font-size:13px; }
 /* .collapse { width:390px;}*/
-.ol-li-lang svg { color:rgba(230, 161, 161, 0.65); font-size:17px; opacity:0;vertical-align:middle;margin-left:5px;cursor:pointer;display:inline-block;}
+.ol-li-lang svg { color:rgba(161, 161, 161, 0.65); font-size:17px; opacity:0;vertical-align:middle;margin-left:5px;cursor:pointer;display:inline-block;}
 .ol-li-lang svg.drag { position:absolute; margin-left:-36px;font-size:17px;margin-top:-1px;  padding-right: 5px;}
 .subcollapse.custom-lang:not(.sorting) .ol-li-lang:hover svg { opacity:1; }
 .subcollapse.custom-lang:not(.sorting) .ol-li-lang:hover svg.drag { opacity:1; cursor: row-resize; }
 .subcollapse.custom-lang.sorting, .subcollapse.custom-lang.sorting * { cursor:row-resize; }
-.ol-li-lang { z-index:100 !important;height:22px;color:rgba(0,0,0,0.87);position:relative;}
+.ol-li-lang { z-index:100 !important;height:26px;color:rgba(0,0,0,0.87);position:relative;}
 .ol-li-lang a { position:relative; }
 ol .ol-li-lang:last-child li:before { display:none; }
-.ol-li-lang:last-child .add { position: absolute; margin-left: -19px; margin-top: -1px; opacity:1; }
+.ol-li-lang:last-child .add { position: absolute; margin-left: -18px; margin-top: -2px; opacity:1; }
+.ol-li-lang:last-child  label { padding-left:6px;}
 /* custom language reordering */
 body > .ol-li-lang:last-child { z-index:101 !important; position:relative; }
 body > .ol-li-lang:last-child li { font-size:13px; list-style-type: none; }
 body > .ol-li-lang:last-child svg { opacity:1;}
-body > .ol-li-lang:last-child li::before { content:'-';}
+body > .ol-li-lang:last-child li::before { content:'(--)';}
+
+
+#outline .widget { min-width:100%; }
+#outline .widget .disabled + span { opacity:0.55;}
+#outline .widget .ol-li-lang li label span:not(.a) { font-size:13px;}
+#outline .widget > label {display:inline-flex;}
+#outline  .dataWidget > label > span:first-child { margin-right:5px;}
+#outline .widget ol { margin-left:4px;}
+#outline .widget label span:not(#a) { font-weight:700; }
+#outline .widget label span:not(#a) .lang-info { font-weight:400; }
+#outline .widget label > span:last-child > span + span::before { content:" + "; font-weight:400;}
+#outline .widget label .checkbox:not(.disabled) { opacity:0.8;}
 
 
 .collapse.sortBy > div:last-child { padding:20px;} 
