--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1130,9 +1130,10 @@ h4:not(:hover) > .lang
 .resource.user .data input[disabled] { color:rgba(0,0,0,0.55); }
 
 .resource.user .data > div[data-props="tmp:cultural"] + div::after { display:none;}
-
+.resource.user .data#outline .widget { margin-left:190px; }
 .resource.user .data#outline > .search { justify-content: flex-start; padding-left:37px;  }
 .resource.user .data#outline > .search h3 { font-weight:600;}
+.resource.user .data#outline .help { font-size:14px; margin-bottom:24px; margin-top:8px; font-weight:300;}
 
 .resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 34px;  height: 60px; background-color: #172832; line-height:58px; }
 .resource .data .header .src.orig { cursor:pointer;}
@@ -2729,6 +2730,7 @@ body > .ol-li-lang:last-child li::before { content:'(--)';}
 #outline .widget label span:not(#a) .lang-info { font-weight:400; }
 #outline .widget label > span:last-child > span + span::before { content:" + "; font-weight:400;}
 #outline .widget label .checkbox:not(.disabled) { opacity:0.8;}
+
 
 
 .collapse.sortBy > div:last-child { padding:20px;} 
