--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1106,12 +1106,15 @@ h4:not(:hover) > .lang
    background-size:auto;background-repeat:no-repeat; background-position: center;
 }
 
-.resource.user .data .header .before { display:flex;align-items: center; justify-content: center;}
-.resource.user .data .header .before img { max-width:80px; height:auto; flex-shrink:0;flex-grow:0; }
+.resource.user .data .header .before { display:flex;align-items: center; justify-content: center; overflow:hidden;}
+.resource.user .data .header .before img { height:auto; flex-shrink:0;flex-grow:0; max-width:80px;}
+.resource.user .data .header .before img:not([src$="header/user.png"]) { max-width:100%; object-fit: cover;  width:100%;  height:100%; }
 
 .resource.user .data .FC { /*width:300px;*/ min-width:230px; }
 .resource.user .data .FC .multiple-select > div  { white-space: normal;}
 .resource.user .data .FC .multiple-select > div .chip { margin-bottom:4px;margin-right:3px; /* background-color: #fce08e; */ cursor:pointer;}
+.resource.user .data .group > .FC.text { width:100%; }
+.resource.user .data .group > .FC.text > .FC {  margin-right:0; }
 
 
 .resource.user .data [data-shrink="true"],
@@ -1125,7 +1128,10 @@ h4:not(:hover) > .lang
 .resource.user .data .FC > label { transform: translate(0, 7px) scale(1); }
 .resource.user .data [data-props="tmp:cultural"][lang="en"] a span { display:inline-block; width:140px; }
 
-.resource.user .data .ulink#upd { width:auto; position:absolute; right:0; margin-top:0; line-height:42px; height:42px;  color:white; background-color: #d73449; border-radius:5px;display:inline-flex;align-items: center;justify-content: center; 
+.resource.user .data #validate { position:absolute; right:0; display:inline-flex; align-items:center;}
+.resource.user .data #validate > svg { opacity:0.55; margin-right:20px; color:#d73449; }
+
+.resource.user .data .ulink#upd { width:auto; margin-top:0; line-height:42px; height:42px;  color:white; background-color: #d73449; border-radius:5px;display:inline-flex;align-items: center;justify-content: center; 
    padding: 0; border:none !important; font-weight:600; font-size:13px;min-width:150px; pointer-events: none;
 }
 .resource.user .data .ulink#upd.on {  cursor:pointer; pointer-events:auto; }
