--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1831,9 +1831,13 @@ span.in { font-weight:500;padding-left:0px; padding-right:10px; margin-left:36px
 
 .resource .sub > h4.label:not(:first-of-type) { max-width:calc(100% - 160px - 15px - 10px - 20px); padding-right:20px;}
 
+.resource .data > div[data-prop="bdo:corporationHasMember"] .sub > .subgroup { flex:auto;}
+.resource .data > div[data-prop="bdo:corporationHasMember"] .sub > .subgroup > .subsub > h4.first + * { 
+  width: calc(100% - 190px ); 
+}
 
 .resource .data > div .sub > .subgroup > .subsub > h4.first { width:150px; }
-.resource .data > div:not([data-prop="bdo:creator"]):not([data-prop="bf:identifiedBy"]) .sub > .subgroup > .subsub > h4.first + * { 
+.resource .data > div:not([data-prop="bdo:creator"]):not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:corporationHasMember"]) .sub > .subgroup > .subsub > h4.first + * { 
    /*max-*/ width: calc(100% - 150px - 15px - 5px ); 
 }
 .resource .data > div:not([data-prop="bdo:creator"]):not([data-prop="bf:identifiedBy"]) .sub > .subgroup > .subsub > h4.first + * h4 { 
@@ -1987,6 +1991,8 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 .resource .data > [data-prop="bdo:lineageHolder"] .propCollapseHeader,
 .resource .data > [data-prop="bdo:lineageHolder"] .propCollapse { padding-right:0; width:calc(100% - 190px); }
 
+[data-prop="bdo:corporationHasMember"].has-collapse.custom .propCollapse,
+[data-prop="bdo:corporationHasMember"].has-collapse.custom .propCollapseHeader,
 [data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapse,
 [data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapseHeader,
 [data-prop="bf:identifiedBy"].has-collapse.custom .propCollapse,
